unpackaged/main/default/objects/Product_Pricing_Schedule__c/Product_Pricing_Schedule__c.object-meta.xml
<CustomObject>
    <label>Product Pricing Schedule</label>
    <nameField>
        <label>Pricing Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Pricing Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>