unpackaged/main/default/objects/Product_Pricing_Schedule__c/fields/Custom_Unit_Description__c.field-meta.xml
<CustomField>
    <fullName>Custom_Unit_Description__c</fullName>
    <label>Custom Unit: Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>