unpackaged/main/default/objects/Product_Pricing_Schedule__c/fields/Lower_Bound_String__c.field-meta.xml
<CustomField>
    <fullName>Lower_Bound_String__c</fullName>
    <label>Lower Bound (string)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>