unpackaged/main/default/objects/Product_Pricing_Schedule__c/fields/Upper_Bound_string__c.field-meta.xml
<CustomField>
    <fullName>Upper_Bound_string__c</fullName>
    <label>Upper Bound (string)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>